Episode 12 added (RAG), gitignore and readme updaed

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ venv/
 ENV/
 env/
 
+# Ignore all PDF files (case-sensitive)
+*.pdf
+*.PDF
+
 # Jupyter Notebooks
 .ipynb_checkpoints/
 *.ipynb_checkpoints
